# meth

./: .gitignore  README.md  pyproject.toml  test.py
examples/: calculator.py  grapher.py
meth/: __init__.py  builtin.py  builtins.py  core.py  error.py  evaluator.py  functions.py  interpreter.py  lexer.py  node.py  nodes.py  parser.py  token.py  utils.py
meth/functions/: __init__.py  simplify.py  stringify.py
tests/: __init__.py  test_evaluate.py  test_simplify.py
