[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meth"
version = "1.2.1"
authors = [
  { name="sertdfyguhi" },
]
description = "A mathematical expression parser and evaluator."
readme = "README.md"
requires-python = ">=3.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
keywords = [
    "math",
    "mathematical",
    "math parser",
    "math evaluator",
    "evaluator",
    "parsing",
    "parser",
]

[project.urls]
"Homepage" = "https://github.com/sertdfyguhi/meth"
"Bug Tracker" = "https://github.com/sertdfyguhi/meth/issues"

[tool.hatch.build.targets.wheel]
packages = ["meth"]